--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: cd backend && npm install && npx prisma generate
+    buildCommand: cd backend && npm install && npx prisma generate && npx prisma db push
     startCommand: cd backend && npm start
     # amazonq-ignore-next-line
     envVars:
