--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Backend Environment Variables
 NODE_ENV=development
 PORT=5000
-DATABASE_URL="postgresql://postgres:password@localhost:5432/focusflow_db"
+DATABASE_URL="postgresql://focusflow_db_ts8s_user:PJvly2rskcDpLhJapRN4OcXQQJSdGRZJ@dpg-d50gg3p5pdvs7392ug7g-a.singapore-postgres.render.com/focusflow_db_ts8s"
 ACCESS_TOKEN_SECRET=your-access-token-secret-here
 REFRESH_TOKEN_SECRET=your-refresh-token-secret-here
 FRONTEND_URL=http://localhost:3000
