Move db push to start command to avoid build issues

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js",
+    "start": "npx prisma db push --accept-data-loss && node server.js",
     "build": "prisma generate && prisma db push",
     "postinstall": "prisma generate",
     "test": "vitest run",
