--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "npx prisma db push --accept-data-loss && node server.js",
-    "build": "prisma generate && prisma db push",
-    "postinstall": "prisma generate",
+    "start": "npx prisma generate && npx prisma db push --accept-data-loss && node server.js",
+    "build": "npx prisma generate",
+    "postinstall": "npx prisma generate",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
