--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "npx prisma generate && npx prisma db push --accept-data-loss && node server.js",
+    "start": "npx prisma generate && npx prisma migrate deploy && node server.js",
     "build": "npx prisma generate",
     "postinstall": "npx prisma generate",
     "test": "vitest run",
