--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "npx prisma generate && npx prisma migrate deploy && node server.js",
+    "start": "node server.js",
     "build": "npx prisma generate",
     "postinstall": "npx prisma generate",
+    "render-postbuild": "npx prisma migrate deploy",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
