--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: focusflow-backend
     env: node
-    buildCommand: npm install && npx prisma generate && npx prisma migrate deploy
-    startCommand: node server.js
+    buildCommand: npm install
+    startCommand: npm start
     envVars:
       - key: NODE_VERSION
         value: 18
