--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Backend Environment Variables
 NODE_ENV=development
 PORT=5000
-DATABASE_URL="postgresql://user:password@host:5432/focusflow"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/focusflow_db"
 ACCESS_TOKEN_SECRET=your-access-token-secret-here
 REFRESH_TOKEN_SECRET=your-refresh-token-secret-here
 FRONTEND_URL=http://localhost:3000
