--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "npx prisma db push && node server.js",
-    "build": "npx prisma generate",
-    "postinstall": "npx prisma generate",
+    "start": "node server.js",
+    "build": "prisma generate && prisma db push",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -24,6 +23,7 @@
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
